improve (stub) font tests, fallback and documentation